<resources>
    <string name="app_name">InventoryManagingApp</string>
    <string name="Log_out">Log Out</string>
    <string name="Barcode_Scanner">Barcode scanner</string>
    <string name="Profile">Profile</string>
    <string name="Search">Search</string>
    <string name="Mainscreen_infoLabel">Highlighted orders and recent activity</string>
    <string name="orderId">Input filter:</string>
    <string name="back">Back</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="permission_level_0">0</string>
    <string name="permission_level_1">1</string>
    <string name="permission_level_2">2</string>
    <string name="StaffName">Name:</string>
    <string name="StaffPermission">Permissions:</string>
    <string name="ManageStaffTitle">Manage Staff</string>
    <string name="StaffId">ID:</string>
    <string name="SearchResults">Search Results:</string>
    <string name="SelectedFilters">Selected Filters:</string>
    <string name="EditQuantities">Edit</string>
    <string-array name="types_array">
        <item>Order</item>
        <item>Article</item>
    </string-array>
    <string-array name="filter_order">
        <item>ID</item>
        <item>deadline</item>
        <item>reference</item>
        <item>responsible</item>
    </string-array>
    <string-array name="filter_article">
        <item>ID</item>
        <item>name</item>
        <item>color</item>
        <item>size</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
